tests/machine/x/c/inner_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/inner_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/inner_join.c:63:3: error: unknown type name ‘list_int’
   63 |   list_int _t3 = list_int_create(orders.len * customers.len);
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/inner_join.c:63:18: warning: implicit declaration of function ‘list_int_create’ [-Wimplicit-function-declaration]
   63 |   list_int _t3 = list_int_create(orders.len * customers.len);
      |                  ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/inner_join.c:72:10: error: request for member ‘data’ in something not a structure or union
   72 |       _t3.data[_t4] = (resultItem){
      |          ^
/workspace/mochi/tests/machine/x/c/inner_join.c:73:44: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   73 |           .orderId = o.id, .customerName = c.name, .total = o.total};
      |                                            ^
/workspace/mochi/tests/machine/x/c/inner_join.c:73:44: note: (near initialization for ‘(anonymous).customerName’)
/workspace/mochi/tests/machine/x/c/inner_join.c:77:6: error: request for member ‘len’ in something not a structure or union
   77 |   _t3.len = _t4;
      |      ^
/workspace/mochi/tests/machine/x/c/inner_join.c:78:28: error: invalid initializer
   78 |   list_resultItem result = _t3;
      |                            ^~~

   1: #include <stdio.h>
